--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,19 @@
-FROM debian:bullseye
+FROM    debian:bullseye
 
-RUN apt-get update && apt-get install mariadb-server -y
+RUN     apt update -y && apt upgrade -y \
+        && apt install mariadb-server -y
 
-COPY tools/create_db.sh .
+RUN     rm -rf /etc/mysql/my.cnf
+COPY    conf/my.cnf /etc/mysql/
 
-RUN chmod 755 create_db.sh
+ENV     MYSQL_DATABASE_NAME mydatabase
+ENV     MYSQL_ROOT_USER aelkhali
+ENV     MYSQL_ROOT_PASSWORD abdo4321
+ENV     MYSQL_USER abdo
+ENV     MYSQL_PASSWORD 123456
 
-CMD [ "sh", "create_db.sh"]
+
+COPY    tools/setup_db.sh .
+RUN     chmod 777 setup_db.sh
+
+CMD     [ "sh", "setup_db.sh"]
