--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,21 +1,20 @@
 server {
-	listen 443 ssl;
+    listen 443 ssl;
+    server_name aelkhali.42.fr;
 
-	server_name localhost;
+    ssl_certificate /etc/nginx/ssl/abdo.crt;
+    ssl_certificate_key /etc/nginx/ssl/abdo.key;
+    ssl_protocols TLSv1.3;
 
-	ssl_certificate /etc/nginx/ssl/inception.crt;
-	ssl_certificate_key /etc/nginx/ssl/inception.key;
-	ssl_protocols TLSv1.3;
+    root /var/www/html;
+    index index.php;
 
-	root /var/www/;
-
-	location / {
+    location / {
         try_files $uri $uri/ /index.php?$args;
     }
 
-	location ~ \.php$ 
-	{
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
-	}
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass wordpress:9000;
+    }
 }
