--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,7 @@ FROM    debian:bullseye
 RUN     apt update -y && apt upgrade -y \
         && apt install mariadb-server -y
 
-RUN     rm -rf /etc/mysql/my.cnf
-COPY    conf/my.cnf /etc/mysql/
+COPY    conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 COPY    tools/setup_db.sh .
 RUN     chmod 777 setup_db.sh
