--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,12 +2,19 @@ FROM    debian:bullseye
 
 RUN     apt-get update -y && apt-get upgrade -y \
         && apt-get install -y wget \
-                              php7.3 \
+                              php \
                               php-fpm \
                               php-mysql \
                               mariadb-client
 
+RUN     mkdir -p   /var/www/html
+
+WORKDIR /var/www/html
+
+RUN     wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+
 COPY    ./tools/setup_wordpress.sh .
+
 RUN     chmod 777 setup_wordpress.sh
 
 CMD     ["sh", "setup_wordpress.sh"]
