--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,13 +1,12 @@
 server {
-    listen 443 ssl;
-    server_name aelkhali.42.fr;
+    listen 443;
+    # server_name aelkhali.42.fr;
 
     ssl_certificate /etc/nginx/ssl/abdo.crt;
     ssl_certificate_key /etc/nginx/ssl/abdo.key;
     ssl_protocols TLSv1.3;
 
     root /var/www/html;
-    index index.php;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
