--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,14 @@
-FROM    debian:bullseye
+FROM            debian:bullseye
+        
+RUN             apt update -y && apt upgrade -y && \
+                apt install mariadb-server -y && \
+                rm -rf /var/lib/apt/lists/*
+        
+COPY            conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY            tools/setup_db.sh .
+        
+RUN             chmod 777 setup_db.sh
 
-RUN     apt update -y && apt upgrade -y \
-        && apt install mariadb-server -y
+ENTRYPOINT      [ "setup_db.sh"]
 
-COPY    conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-
-COPY    tools/setup_db.sh .
-RUN     chmod 777 setup_db.sh
-
-CMD     [ "sh", "setup_db.sh"]
+CMD             [ "mysqld"]
