--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,15 +1,14 @@
 FROM    debian:bullseye
 
-RUN     apt update -y && apt upgrade -y \
-        && apt install -y nginx \
-        && apt install openssl
+RUN     apt update && \
+        apt upgrade -y && \
+        apt install -y nginx openssl && \
+        mkdir -p /etc/nginx/ssl && \
+        chmod 755 /etc/nginx/ssl && \
+        rm -rf /var/lib/apt/lists/*
 
-RUN     mkdir -p /etc/nginx/ssl \
-        && chmod 755 /etc/nginx/ssl
+COPY    tools/abdo.crt /etc/nginx/ssl/
+COPY    tools/abdo.key /etc/nginx/ssl/
+COPY    conf/nginx.conf /etc/nginx/conf.d/
 
-COPY    /tools/abdo.crt /etc/nginx/ssl/
-COPY    /tools/abdo.key /etc/nginx/ssl/
-
-COPY    /conf/nginx.conf /etc/nginx/conf.d/
-
-CMD     [ "nginx", "-g", "daemon off;" ]
+CMD     ["nginx", "-g", "daemon off;"]
