--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,43 +1,63 @@
 version: "3.8"
 services:
+
+  nginx:
+    container_name: nginx
+    build: ./srcs/requirements/nginx/Dockerfile
+    volumes:
+      - wordpress:/var/www/html;
+    depends_on:
+      - wordpress
+    ports:
+      - "443:443"
+    env_file:
+      - .env
+    restrat: always
+    networks:
+      - inception
+
   mariadb:
     container_name: mariadb
     build: ./srcs/requirements/mariadb/Dockerfile
     volumes:
-      - mariadb:/app/src
-    ports:
-      - "443:443"
-    restrat: always
+      - mariadb:/var/lib/mysql
+    expose:
+      - "3306"
     env-file:
-      - ../.env
-    deploy:
-      restart_policy:
-        condition: on-failure
+      - .env
+    restrat: always
+    networks:
+      - inception
+
   wordpress:
     container_name: wordpress
     build: ./srcs/requirements/wordpress/Dockerfile
     volumes:
-      - wordpress:/app/src:ro # still need to be fixed
-    ports:
-      - "9000:9000"
-    restrat: always
+      - wordpress:/var/www/html
     depends_on:
       - mariadb
-      - nginx
+    expose:
+      - "9000"
     env-file:
-      - ../.env
-    deploy:
-      restart_policy:
-        condition: on-failure
-  nginx:
-    container_name: nginx
-    build: ./srcs/requirements/nginx/Dockerfile
-    ports:
-      - "443:443"
+      - .env
     restrat: always
-    deploy:
-      restart_policy:
-        condition: on-failure
+    networks:
+      - inception
+
+networks:
+  inception:
+    driver: bridge
+
 volumes:
   mariadb:
+    driver: local
+      driver_opts:
+        type: none
+        o: bind
+        device: /home/aelkhali/data/mariadb
   wordpress:
+    driver: local
+      driver_opts:
+        type: none
+        o: bind
+        device: /home/aelkhali/data/wordpress
