working compose version

--- a/srcs/.env
+++ b/srcs/.env
@@ -8,6 +8,8 @@ KEY_=./requirements/nginx/tools/abdo.key
 MYSQL_DATABASE_NAME=mydatabase 
 MYSQL_PASSWORD=123456 
 MYSQL_USER=abdo
+MYSQL_ROOT=rootpass
+
 
 # WORDPRESS SETUP
 # admin
