--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM    debian:bullseye
 
-RUN     apt update && \
-        apt upgrade -y && \
-        apt install -y nginx openssl && \
+RUN     apt-get update && \
+        apt-get upgrade -y && \
+        apt-get install -y nginx openssl && \
         mkdir -p /etc/nginx/ssl && \
         chmod 755 /etc/nginx/ssl && \
         rm -rf /var/lib/apt/lists/*
@@ -12,3 +12,5 @@ COPY    tools/abdo.key /etc/nginx/ssl/
 COPY    conf/nginx.conf /etc/nginx/conf.d/
 
 CMD     ["nginx", "-g", "daemon off;"]
+
+
