css need to be fixed on remote host machine

--- a/srcs/.env
+++ b/srcs/.env
@@ -19,6 +19,9 @@ WP_SITE_TITLE=website
 WP_ADMIN_EMAIL=elkhalilabdrahman@gmail.com
 
 # user 
-WP_USER=ahmed 
+WP_USER=ahmed
 WP_USER_EMAIL=ahmed@gmail.com 
 WP_USER_PASS=654321
+
+#wp-config
+WP_DB_HOST=mariadb
