--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,12 +1,13 @@
 server {
     listen 443 ssl;
-    server_name aelkhali.42.fr;
+    server_name localhost aelkhali.42.fr;
 
     ssl_certificate /etc/nginx/ssl/abdo.crt;
     ssl_certificate_key /etc/nginx/ssl/abdo.key;
-    ssl_protocols TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-    root /var/www/html;
+    root /var/www/html/;
+    index  index.php;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
