wordpress launched successfully

--- a/srcs/.env
+++ b/srcs/.env
@@ -19,9 +19,9 @@ WP_SITE_TITLE=website
 WP_ADMIN_EMAIL=elkhalilabdrahman@gmail.com
 
 # user 
-WP_USER=ahmed
-WP_USER_EMAIL=ahmed@gmail.com 
-WP_USER_PASS=654321
+WP_USER=test
+WP_USER_EMAIL=test@gmail.com 
+WP_USER_PASS=123456
 
 #wp-config
 WP_DB_HOST=mariadb
