changed the exec to use the Next command

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,10 +3,9 @@ FROM            debian:bullseye
 RUN             apt-get update -y && apt-get upgrade -y && \
                 apt-get install mariadb-server -y
 
-WORKDIR         /app
-
-COPY            tools/setup_db.sh /app
-        
+COPY            tools/setup_db.sh .
 RUN             chmod 777 setup_db.sh
 
-CMD             [ "sh", "/app/setup_db.sh"]
+ENTRYPOINT      ["bash", "setup_db.sh"]
+
+CMD             ["mysqld", "--bind_address=0.0.0.0"]
