--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -14,4 +14,6 @@ COPY    ./tools/setup_wordpress.sh .
 
 RUN     chmod 777 setup_wordpress.sh
 
-CMD     [ "sh", "setup_wordpress.sh"]
+ENTRYPOINT      ["bash", "setup_wordpress.sh"]
+
+CMD             ["/usr/sbin/php-fpm7.4", "-F"]
