--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   nginx:
     container_name: nginx
+    image: nginx_img
     build:
       context: requirements/nginx
       dockerfile: Dockerfile
@@ -18,6 +19,7 @@ services:
       - inception
   mariadb:
     container_name: mariadb
+    image: mariadb_img
     build:
       context: requirements/mariadb
       dockerfile: Dockerfile
@@ -32,6 +34,7 @@ services:
       - inception
   wordpress:
     container_name: wordpress
+    image: wordpress_img
     build:
       context: requirements/wordpress
       dockerfile: Dockerfile
