--- a/srcs/.env
+++ b/srcs/.env
@@ -6,10 +6,9 @@ KEY_=./requirements/nginx/tools/abdo.key
 
 # MYSQL SETUP
 MYSQL_DATABASE_NAME=mydatabase 
-MYSQL_PASSWORD=123456 
+MYSQL_PASSWORD=123456
 MYSQL_USER=abdo
 MYSQL_ROOT=rootpass
-
 
 # WORDPRESS SETUP
 # admin
@@ -25,3 +24,7 @@ WP_USER_PASS=654321
 
 #wp-config
 WP_DB_HOST=mariadb
+
+#Bonus ENVS
+#Adminer
+MYSQL_PORT=3306
