--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   nginx:
     container_name: nginx
-    image: nginx_img
+    image: nginx
     build:
       context: requirements/nginx
       dockerfile: Dockerfile
@@ -19,7 +19,7 @@ services:
       - inception
   mariadb:
     container_name: mariadb
-    image: mariadb_img
+    image: mariadb
     build:
       context: requirements/mariadb
       dockerfile: Dockerfile
@@ -34,7 +34,7 @@ services:
       - inception
   wordpress:
     container_name: wordpress
-    image: wordpress_img
+    image: wordpress
     build:
       context: requirements/wordpress
       dockerfile: Dockerfile
@@ -51,7 +51,7 @@ services:
       - inception
   adminer:
     container_name: adminer
-    image: adminer_img
+    image: adminer
     build:
       context: requirements/bonus/adminer
       dockerfile: Dockerfile
@@ -65,8 +65,8 @@ services:
     networks:
       - inception
   website:
-    container_name: portfolio_web
-    image: website_img
+    container_name: website
+    image: website
     build:
       context: requirements/bonus/website
       dockerfile: Dockerfile
@@ -75,7 +75,7 @@ services:
     restart: always
   cadvisor:
     container_name: cadvisor
-    image: cadvisor_img
+    image: cadvisor
     build:
       context: requirements/bonus/cadvisor
       dockerfile: Dockerfile
