--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,12 +3,12 @@ FROM    debian:bullseye
 RUN     apt-get update && \
         apt-get upgrade -y && \
         apt-get install -y nginx openssl && \
-        mkdir -p /etc/nginx/ssl && \
-        chmod 755 /etc/nginx/ssl && \
         rm -rf /var/lib/apt/lists/*
 
-COPY    tools/abdo.crt /etc/nginx/ssl/
-COPY    tools/abdo.key /etc/nginx/ssl/
 COPY    conf/nginx.conf /etc/nginx/conf.d/
+COPY    ./tools/generate_tls.sh .
+RUN     chmod 777 generate_tls.sh .
+
+ENTRYPOINT      ["bash", "generate_tls.sh"]
 
 CMD     ["nginx", "-g", "daemon off;"]
