--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name localhost aelkhali.42.fr;
 
-    ssl_certificate /etc/nginx/ssl/abdo.crt;
-    ssl_certificate_key /etc/nginx/ssl/abdo.key;
+    ssl_certificate /etc/nginx/ssl/inception.crt;
+    ssl_certificate_key /etc/nginx/ssl/inception.key;
     ssl_protocols TLSv1.2 TLSv1.3;
 
     root /var/www/html/;
